--- a/honors-project/convert.html
+++ b/honors-project/convert.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Statblocks to Ironsworn</title>
+    <title>Honors Project - Ironsworn Translator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="page-header">
-        <h1>Ironsworn Translator</h1>
+        <h1>Honors Project - Ironsworn Translator</h1>
     </div>
     <div class="stat-input">
         
@@ -32,10 +32,6 @@
     <div class="stat-output">
         <h3>Results</h3>
         <textarea id="results" name="results"></textarea>
-    </div>
-    <div class="footer">
-        <h1>About</h1>
-        <p>info</p>
     </div>
     <script src="toIronsworn.js"></script>
 </body>
